chandeliers-lus/tests/compile_fail/ui/causality/cycle-const.stderr
error: Global `D` was found to be part of a dependency cycle
 --> tests/compile_fail/ui/causality/cycle-const.rs:6:11
  |
6 |     const D : int = A;
  |           ^
  |
note: The cycle also goes through Global `B`
 --> tests/compile_fail/ui/causality/cycle-const.rs:5:11
  |
5 |     const B : int = D;
  |           ^
note: The cycle also goes through Global `A`
 --> tests/compile_fail/ui/causality/cycle-const.rs:3:11
  |
3 |     const A : int = B + C;
  |           ^
